--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Clean Blog
+title: Elevation Gain
 header-img: img/home-bg.jpg
 email: your-email@yourdomain.com
 copyright_name: Your/Project/Corporate Name
-description: "Write your site description here. It will be used as your sites meta description as well!"
+description: "Trail Running Montañas Relatos y Carreras de Aventura"
 baseurl: 
 url: 
 twitter_username: SBootstrap
