--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 # Site settings
 title: Elevation Gain
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
+author: Mariano Dominguez
+email: marianodominguez@gmail.com
 copyright_name: Your/Project/Corporate Name
-description: "Trail Running Montañas Relatos y Carreras de Aventura"
+description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
 baseurl: 
 url: 
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  StartBootstrap
+twitter_username: marian_dom
+github_username:  marianodom
+facebook_username:  mariano.dom
 email_username:  your-email@yourdomain.com
 
 # Google Analytics
