--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ title: Elevation Gain
 header-img: img/home-bg.jpg
 author: Mariano Dominguez
 email: marianodominguez@gmail.com
-copyright_name: Your/Project/Corporate Name
+copyright_name: ElevationGain
 description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
 baseurl: 
 url: 
 twitter_username: marian_dom
 github_username:  marianodom
 facebook_username:  mariano.dom
-email_username:  your-email@yourdomain.com
+email_username:  marianodominguez@gmail.com
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
