--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ author: Mariano Dominguez
 email: marianodominguez@gmail.com
 copyright_name: ElevationGain
 description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: marian_dom
 github_username:  marianodom
 facebook_username:  mariano.dom
@@ -23,4 +23,7 @@ permalink: pretty
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
-gems: [jekyll-paginate, jekyll-feed, jekyll-sitemap]
+gems:
+  - jekyll-paginate
+  - jekyll-feed
+  - jekyll-sitemap
