--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire l
 baseurl:
 url:
 twitter_username: marian_dom
-github_username:  marianodom
+github_username:  
 facebook_username:  mariano.dom
 email_username:  marianodominguez@gmail.com
 
