--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Mariano Dominguez
 email: marianodominguez@gmail.com
 copyright_name: ElevationGain
 description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
-baseurl:
+baseurl: http://elevationgain.com
 url: http://elevationgain.com
 twitter_username: marian_dom
 github_username:
