--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ author: Mariano Dominguez
 email: marianodominguez@gmail.com
 copyright_name: ElevationGain
 description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
-baseurl: http://elevationgain.com
-url: http://elevationgain.com
+baseurl: 
+url:
 twitter_username: marian_dom
 github_username:
 facebook_username:  mariano.dom
