--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ header-img: img/home-bg.jpg
 author: Mariano Dominguez
 email: marianodominguez@gmail.com
 copyright_name: ElevationGain
-description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
-baseurl: 
+description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre. Sky Running, Ultra Trail y todas las modalidades en el mundo del Trail."
+baseurl:
 url:
 twitter_username: marian_dom
 github_username:
