--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ copyright_name: ElevationGain
 description:
 baseurl:
 url:
-twitter_username: marian_dom
+twitter_username:
 github_username:
 facebook_username:  mariano.dom
 email_username:  marianodominguez@gmail.com
